fix(styles): adjust padding in OrderPage for consistent layout spacing
- Update `.wrapper`, `.modalContent`, and `.actions` styles to improve padding and alignment.

--- a/src/views/orderPage/OrderPage.module.scss
+++ b/src/views/orderPage/OrderPage.module.scss
@@ -1,7 +1,7 @@
 @use '@assets/styles/constants';
 
 .wrapper {
-  padding-bottom: 80px;
+  padding: 16px 0 80px;
   max-width: 800px;
   margin: 0 auto;
   min-height: 200px;
@@ -35,6 +35,7 @@
   z-index: 1000;
   max-width: 680px;
   margin: 0 auto;
+  padding-bottom: 52px;
 }
 
 .statusText {
@@ -47,7 +48,7 @@
 }
 
 .actions {
-  padding: 16px;
+  padding: 16px 16px 0;
   display: flex;
   gap: 16px;
   justify-content: flex-end;
